Wed Apr 13 07:06:11 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/CORBALOC_Parser.cpp:
          Added an additional test for the valid condition of no key
          separator at the end of the corbaloc string.

Wed Apr 13 11:26:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Any/client.cpp:
        * tests/OBV/Any/server.cpp:
        * tests/CodeSets/simple/client.cpp:
        * tests/CodeSets/simple/server.cpp:
          Print out whether exception is caught in the client or in the server

Wed Apr 13 11:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableInterceptor.pidl:
          Moved several parts of this file to new pidl files that are
          included here. This in preparation of some portable interceptor
          subsetting we are going to do.

        * tao/PI_Forward.pidl:
          Moved SlotId and ReplyStatus typedefs to this file

        * tao/InvalidSlot.pidl:
          Moved the InvalidSlot exception to this file

        * tao/ORBInitializer.pidl:
          Moved the ORBInitializer interface to this file

        * tao/RequestInfo.pidl:
          Moved the RequestInfo interface to this file.

        * tao/RequestInfoA.cpp:
        * tao/RequestInfoC.{h,cpp}:
        * tao/RequestInfoS.h:
        * tao/ORBInitializerA.cpp:
        * tao/ORBInitializerC.{h,cpp}:
        * tao/ORBInitializerS.h:
        * tao/InvalidSlotA.cpp:
        * tao/InvalidSlotC.{h,cpp}:
        * tao/InvalidSlotS.h:
          New generated files

        * tao/tao.mpc:
        * tao/Makefile.am:
          Added new files

        * tao/PI_ForwardC.{h,cpp}:
          Regenerated

        * tao/PortableInterceptorA.cpp:
        * tao/PortableInterceptorC.{h,cpp}:
          Regenerated

        * tao/diffs/PortableInterceptor.diff:
          Updated

Wed Apr 13 08:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
